fixed up spacing on resume a bit.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,47 @@
 /* These are styles appied to the whole website */
 @import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Work+Sans:wght@900&display=swap');
+@keyframes picAnimateRight {
+  0% {
+    -webkit-transform: rotate(0deg);
+    opacity: 1.0;
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    opacity: 0;
+  }
+}
+@-webkit-keyframes picAnimateRight {
+  0% {
+    -webkit-transform: rotate(0deg);
+    opacity: 1.0;
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    opacity: 0;
+  }
+}
+
+@keyframes picAnimateLeft {
+  0% {
+    -webkit-transform: rotate(0deg);
+    opacity: 1.0;
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    opacity: 0;
+  }
+}
+@-webkit-keyframes picAnimateLeft {
+  0% {
+    -webkit-transform: rotate(0deg);
+    opacity: 1.0;
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    opacity: 0;
+  }
+}
 
 :root{
   --color-one: #A2807F;
@@ -54,7 +95,6 @@ header a {
   font-weight: 700;
   color:var(--color-two);
   text-shadow: 1px 1px black;
-  color: var(--color-two);
 }
 
 header nav ul {
@@ -69,10 +109,20 @@ header nav ul li a{
   margin: 10px 20px;
   padding: 10px 15px ;
   box-shadow: 1px 1px black ;
-  border-radius: 25%;
+  border-radius: 50%;
   font-size: 1.55vw;
   font-weight: 800;
   transition: margin-left 1.5s ease-in;
+}
+header nav ul li a:hover{
+  background-color: var(--color-six);
+  color: var(--color-three) ;
+  box-shadow: 1px 1px black ;
+}
+header nav ul li a:active{
+  background-color: var(--color-three);
+  color: var(--color-two);
+  box-shadow: -1px -1px black ;
 }
 
 /* Hero Styles Start Here */
@@ -103,12 +153,12 @@ header nav ul li a{
   background-repeat: repeat;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-clip: none;
+  background-clip: text;
   transition: margin-right 30s ease-out; 
 }
 
-/*About Me Section Starts */
 
+/*About Me Section Starts */
 .about-me {
   margin-top: 15px;
   background-image: radial-gradient(
@@ -120,76 +170,57 @@ header nav ul li a{
     var(--color-five) 100%
     );
   display: flex;
-  flex-wrap: wrap;  
+  flex-wrap: wrap; 
+  align-items: center;
+  justify-content: center;
 }
 
 .about-me img {
+  margin: 20px;
   flex: 1 15%;
-  margin-right: 20px;
-  padding: 0 50px 0 100px;
 }
-
-@keyframes picAnimate {
-  0% {
-    -webkit-transform: rotate(0deg);
-    opacity: 1.0;
-  }
-  25% {
-    -webkit-transform: rotate(45deg);
-    opacity: 0.75;
-  }
-  50%{
-    -webkit-transform: rotate(90deg);
-    opacity: 0.5;
-  }
-  75% {
-    -webkit-transform: rotate(135deg);
-    opacity: 0.25;
-  }
-  100% {
-    -webkit-transform: rotate(180deg);
-    opacity: 0.1;
-  }
-}
-@-webkit-keyframes picAnimate {
-  0% {
-    -webkit-transform: rotate(0deg);
-    opacity: 1.0;
-  }
-  25% {
-    -webkit-transform: rotate(45deg);
-    opacity: 0.75;
-  }
-  50%{
-    -webkit-transform: rotate(90deg);
-    opacity: 0.5;
-  }
-  75% {
-    -webkit-transform: rotate(135deg);
-    opacity: 0.25;
-  }
-  100% {
-    -webkit-transform: rotate(180deg);
-    opacity: 0.1;
-  }
-}
-.about-me img:hover {
+ #t-bone{
+   padding: 50px;
+ }
+#t-bone:hover {
   animation-fill-mode: forwards;
-  -webkit-animation-name: picAnimate;
-  -webkit-animation-duration: 1s;
-  -webkit-animation-timing-function: ease-in;
+  animation-name: picAnimateRight;
+  animation-duration: 4s;
+  animation-timing-function: linear;
+  -webkit-animation-name: picAnimateRight;
+  -webkit-animation-duration: 4s;
+  -webkit-animation-timing-function: linear;
+}
+ 
+#headshot {
+  flex: 1 15%;
+  border-radius: 50%;
+  padding: 10px;
+}
+#headshot:hover {
+  animation-fill-mode: forwards;
+  animation-name: picAnimateLeft;
+  animation-duration: 4s;
+  animation-timing-function: linear;
+  -webkit-animation-name: picAnimateLeft;
+  -webkit-animation-duration: 4s;
+  -webkit-animation-timing-function: linear;
 }
 
 .about-me article{
+  background-color: rgba(131,164,207,0.5);
+  border-radius: 25%;
   align-content: flex-end;
   text-align: center;
-  flex: 1 60%;
-  padding-right: 275px;
-  padding-left: 100px;
-  
+  flex: 2 30%;
+  padding: 25px 50px 50px 50px; 
+}
+
+.about-me article:hover {
+  background-color: rgba(131,164,207,1.0);
 }
 .about-me h3{
-  margin: 20px 15px;
+  margin: 15px;
   padding: auto;
 }
 
@@ -218,23 +249,28 @@ header nav ul li a{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 20px;
+  align-items: center;
+  margin: 50px;
+}
+
+.select-work img{
+  border-radius: 15%;
 }
 
 .select-work article{
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;  
+  align-items: center;
+  margin: 50px;
 }
 
 .select-work h3 {
-  margin: 10px;
+  margin: 20px;
 }
 
 .select-work p{
-  margin: 10px;
+  margin: 20px;
 }
 /*Resume Style Starts Here */
 
@@ -247,10 +283,40 @@ header nav ul li a{
     var(--color-six) 80%, 85%,
     var(--color-five) 100%
     );
+    display: flex;
+    justify-content: center;
+}
+
+.resume-paper {
+  background-color: rgba(131,164,207,0.5);
+  border-radius: 25%;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  align-items: center;
+  flex: 1 50%;
+}
+.resume-paper:hover {
+  background-color: rgba(131,164,207,1.0);
+}
+ 
+.resume-paper h2{
+  margin: 25px auto 50px auto;
+  padding: auto;
+}
+.resume-paper h3 {
+  margin: 25px auto 25px 25px;
+}
 
+.resume-paper h4 {
+  margin: 10px auto 5px 25px;
+}
+
+.resume-paper h4 span {
+  margin-left: 50px;
+}
+.resume-paper h5 {
+  margin: 0 auto 10px 50px;
 }
 /*Contact Me Style Starts Here */
 
